# mandelbrot_cpp

./: CMakeLists.txt  readme.md
include/: input_utilities.hpp  mandelbrot.hpp
source/: main.cpp  mandelbrot.cpp
